--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,6 @@ jobs:
         with:
           urls: |
             https://uat-front.niagahoster.co.id/
+          budgetPath: '.github/lighthouse/budget.json'  
           uploadArtifacts: true # save results as an action artifacts
           temporaryPublicStorage: true # upload lighthouse report to the temporary storage
