--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: Audit URLs using Lighthouse
         uses: treosh/lighthouse-ci-action@v9
+        env:
+          URL_DOMAIN: 'niagahoster.co.id'
         with:
           urls: |
-            https://www.niagahoster.co.id/
-            https://www.niagahoster.co.id/afiliasi
-          configPath: '.github/lighthouse/lighthouserc.json'
+            https://$URL_DOMAIN/
+            https://$URL_DOMAIN/afiliasi
+          budgetPath: '.github/lighthouse/budget.json'
+          configPath: '.github/lighthouse/desktop-config.json'
           uploadArtifacts: true
           temporaryPublicStorage: true
