update budget to ms

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Audit URLs using Lighthouse
         uses: treosh/lighthouse-ci-action@v9
         env:
-          URL_DOMAIN: 'niagahoster.co.id'
+          URL_DOMAIN: 'www.niagahoster.co.id'
         with:
           urls: |
             https://$URL_DOMAIN/
