--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -7,16 +7,29 @@ jobs:
   lighthouse:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Audit URLs using Lighthouse
-        uses: treosh/lighthouse-ci-action@v9
-        env:
-          URL_DOMAIN: 'www.niagahoster.co.id'
-        with:
-          urls: |
-            https://$URL_DOMAIN/
-            https://$URL_DOMAIN/afiliasi
-          configPath: '.github/lighthouse/lighthouserc.json'
-          budgetPath: '.github/lighthouse/mobile-budget.json'
-          uploadArtifacts: true
-          temporaryPublicStorage: true
+    - uses: actions/checkout@v2
+
+    - name: Use Node.js 14.x
+      uses: actions/setup-node@v2
+      with:
+        node-version: 14.x
+
+    - name: Install chrome
+      run: |
+        wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+        sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
+        sudo apt-get update 
+        sudo apt-get install google-chrome-stable
+
+    - name: Audit URLs using Lighthouse
+      uses: treosh/lighthouse-ci-action@v9
+      env:
+        URL_DOMAIN: 'www.niagahoster.co.id'
+      with:
+        urls: |
+          https://$URL_DOMAIN/
+          https://$URL_DOMAIN/afiliasi
+        configPath: '.github/lighthouse/lighthouserc.json'
+        budgetPath: '.github/lighthouse/mobile-budget.json'
+        uploadArtifacts: true
+        temporaryPublicStorage: true
